--- a/sound-testing/index.html
+++ b/sound-testing/index.html
@@ -7,7 +7,7 @@
     <title>p5 - Sound Test</title>
 </head>
 <body>
-    
+    <p>Press SPACE to start</p>
 </body>
     <script src="libs/p5.min.js"></script>
     <script src="libs/p5.sound.min.js"></script>
