UPD - changed text to canvas

--- a/sound-testing/index.html
+++ b/sound-testing/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>p5 - Sound Test</title>
 </head>
-<body>
-    <p>Press SPACE to start</p>
-</body>
+<body></body>
     <script src="libs/p5.min.js"></script>
     <script src="libs/p5.sound.min.js"></script>
     <script src="script.js"></script>
