--- a/microphone-mouth/index.html
+++ b/microphone-mouth/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p5 - Sound Test</title>
+    <title>p5 - Mic Mouth</title>
 </head>
 <body></body>
     <script src="libs/p5.min.js"></script>
